force-app/main/default/objects/CollectionsInvoice__c/CollectionsInvoice__c.object-meta.xml
<CustomObject>
    <description>Junction object to link Invoices to Collection Plans</description>
    <label>Collections Invoice</label>
    <nameField>
        <displayFormat>CI-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collections Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>