force-app/main/default/objects/CollectionsInvoice__c/fields/CollectionsPlan__c.field-meta.xml
<CustomField>
    <fullName>CollectionsPlan__c</fullName>
    <label>Collections Plan</label>
    <referenceTo>CollectionsPlan__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Collections_Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>