force-app/main/default/objects/CollectionsInvoice__c/fields/InvoiceBalance__c.field-meta.xml
<CustomField>
    <fullName>InvoiceBalance__c</fullName>
    <label>Invoice Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>